hphp/test/zend/good/Zend/tests/errmsg_044.php.expectf

Fatal error: Object does not implement ArrayAccess in %s/errmsg_044.php on line 4
